Fixed about section image overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -1683,3 +1683,90 @@ footer {
         font-size: 1.8rem;
     }
 }
+/* About Section - Mobile Fix */
+@media (max-width: 900px) {
+    .image-grid {
+        height: 280px;
+        max-width: 100%;
+        overflow: hidden;
+    }
+    
+    .img-large {
+        width: 200px;
+        height: 180px;
+        top: 0;
+        left: 0;
+    }
+    
+    .img-small-left {
+        width: 120px;
+        height: 120px;
+        bottom: 0;
+        left: 10px;
+    }
+    
+    .img-small-right {
+        width: 130px;
+        height: 130px;
+        bottom: 0;
+        right: 5px;
+    }
+}
+
+@media (max-width: 600px) {
+    .image-grid {
+        height: 240px;
+        max-width: 100%;
+        overflow: hidden;
+    }
+    
+    .img-large {
+        width: 160px;
+        height: 150px;
+        top: 0;
+        left: 0;
+    }
+    
+    .img-small-left {
+        width: 100px;
+        height: 100px;
+        bottom: 0;
+        left: 5px;
+    }
+    
+    .img-small-right {
+        width: 110px;
+        height: 110px;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .image-grid {
+        height: 200px;
+        max-width: 100%;
+        overflow: hidden;
+    }
+    
+    .img-large {
+        width: 130px;
+        height: 120px;
+        top: 0;
+        left: 0;
+    }
+    
+    .img-small-left {
+        width: 80px;
+        height: 80px;
+        bottom: 0;
+        left: 3px;
+    }
+    
+    .img-small-right {
+        width: 90px;
+        height: 90px;
+        bottom: 0;
+        right: 0;
+    }
+}
